--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  height: 100vh;
+}
+
+#root {
+  height: 100vh;
+}
+
+#root > div {
+  height: 100vh;
+}
